--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,15 @@
-<nav>
-    <ul>
-      <li><a routerLink="/home">Головна</a></li>
-      <li><a routerLink="/dashboard">Панель користувача</a></li>
-      <li><a routerLink="/editor">Редактор ескізів</a></li>
-      <li><a routerLink="/generator">Генератор схем</a></li>
-      <li><a routerLink="/library">Бібліотека матеріалів</a></li>
-      <li><a routerLink="/instructions">Інструкції</a></li>
-      <li><a routerLink="/community">Спільнота</a></li>
-      <li><a routerLink="/auth">Авторизація</a></li>
-    </ul>
-  </nav>
-  
+<nav class="navbar">
+  <div class="logo-container">
+    <img src="/frontend/src/app/assets/logo.png" alt="Macrame Logo" />
+  </div>
+  <ul>
+    <li><a routerLink="/home">Головна</a></li>
+    <li><a routerLink="/dashboard">Панель користувача</a></li>
+    <li><a routerLink="/editor">Редактор ескізів</a></li>
+    <li><a routerLink="/generator">Генератор схем</a></li>
+    <li><a routerLink="/library">Бібліотека матеріалів</a></li>
+    <li><a routerLink="/instructions">Інструкції</a></li>
+    <li><a routerLink="/community">Спільнота</a></li>
+    <li><a routerLink="/auth">Авторизація</a></li>
+  </ul>
+</nav>
