--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,7 @@
-<div class="home-container">
-  
-    <section class="welcome-section">
-      <h1>Ласкаво просимо до нашого застосунку!</h1>
-      <p>Цей застосунок допоможе вам зберігати і організовувати свої проєкти. Вхід або реєстрація дозволить вам зберігати свої дані для подальшої роботи.</p>
-      
-      <!-- Перевірка авторизації -->
-      <div *ngIf="!isLoggedIn; else loggedInContent">
-        <button (click)="goToRegistration()">Реєстрація</button>
-        <button (click)="goToLogin()">Вхід</button>
-      </div>
-      
-      <ng-template #loggedInContent>
-        <p>Вітаємо, ви авторизовані!</p>
-       <button (click)="goToProfile()">Перейти до профілю</button>
-      </ng-template>
-    </section>
+
+  <div class="home-container">
+  <section class="welcome-section">
+    <h1>Welcome to Our Application!</h1>
+    <p>This application helps you to store and organize your projects. You can log in or register to save your data for future use.</p>
+  </section>
   </div>
-  
