--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,14 @@
 <nav class="navbar">
   <div class="logo-container">
-    <img src=".../app/assets/logo.png" alt="Macrame Logo" />
+    <img src="assets/icons/logo.svg" alt="Logo">
   </div>
   <ul>
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/editor">Sketch Editor</a></li>
-    <li><a routerLink="/generator">Pixel Art</a></li>
-    <li><a routerLink="/community">Community</a></li>
-    <li><a routerLink="/auth">Login/Register</a></li>
-    <li><a routerLink="/dashboard">Profile</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/home.svg" routerLink="/home">Logo</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/home.svg" routerLink="/home">Home</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/edit.svg" routerLink="/editor">Sketch Editor</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/pixel.svg" routerLink="/pixel">Pixel Art</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/community.svg" routerLink="/community">Community</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/registration.svg" routerLink="/auth">Login/Register</a></li>
+    <li><a href="#" class="nav-item"><img src="assets/icons/profile.svg" routerLink="/dashboard">Profile</a></li>
   </ul>
 </nav>
