--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -55,4 +55,11 @@
     height: 25px; 
     width: 25px;
     margin-right: 20px;
+    transition: filter 0.3s ease, transform 0.3s ease;
+    transform: scale(1.1);
+}
+
+.nav-item:hover img {
+    filter: brightness(0) saturate(100%) invert(100%); 
+    transform: scale(1.1);
 }
