--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <img src="assets/icons/logo.svg" alt="Logo">
   </div>
   <ul>
-    <li><a href="#" class="nav-item"><img src="assets/icons/home.svg" routerLink="/home">Logo</a></li>
+    <li><a  routerLink="/home">.................</a></li>
     <li><a href="#" class="nav-item"><img src="assets/icons/home.svg" routerLink="/home">Home</a></li>
     <li><a href="#" class="nav-item"><img src="assets/icons/edit.svg" routerLink="/editor">Sketch Editor</a></li>
     <li><a href="#" class="nav-item"><img src="assets/icons/pixel.svg" routerLink="/pixel">Pixel Art</a></li>
