--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,7 +35,7 @@
   main {
     flex: 1;
     padding: 2rem;
-    background-color: #f9f9f9;
+    background-color: #000000;
   
     h1 {
       text-align: center;
@@ -50,7 +50,7 @@
   
   /* Стилі для футера */
   footer {
-    background-color: #412a3c;
+    background-color: #5f164f;
     color: white;
     text-align: center;
     padding: 0.5rem;
