--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: #333;
+    background-color: #c76da9;
     color: white;
     text-align: center;
     padding: 1rem;
