--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,8 @@
   <div class="home-container">
   <section class="welcome-section">
     <h1>Welcome to Our Application!</h1>
-    <p>This application helps you to store and organize your projects. You can log in or register to save your data for future use.</p>
+    <p>This application helps you to store and organize your projects. 
+      You can log in or register to save your data for future use.</p>
   </section>
+  <img src="assets/Group.svg">
   </div>
