add adaptive design for footer navbar and home

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,6 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <footer>
     <p>&copy; 2025 Macrame by Massyk Anastasia</p>
-  </footer>
+</footer>
