--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,18 @@
-
-  <div class="home-container">
-  <section class="welcome-section">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<div class="home-container">
+  <section class="text-section">
     <h1>Welcome to Our Application!</h1>
-    <p>This application helps you to store and organize your projects. 
-      You can log in or register to save your data for future use.</p>
+    <p>
+      Our platform is created for those who are passionate about macrame and needlework. 
+      It allows you to easily create sketches and schemes of various complexity, as well 
+      as automatically convert photos into ready-made layouts. We also provide the ability 
+      to save and share your projects, and a community forum will help you share tips and 
+      experiences. With our application, creativity becomes even more accessible!
+    </p>
   </section>
-  <img src="assets/Group.svg">
-  </div>
+  <section class="image-section">
+    <img src="assets/Group.svg" alt="Illustration">
+  </section>
+</div>
