--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,10 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <nav class="navbar">
-  <div class="logo-container">
-    <img src="assets/icons/logo.svg" alt="Logo">
-  </div>
   <ul>
-    <li><a  routerLink="/home">.................</a></li>
+    <li><a routerLink="/home"><div class="logo-container nav-item"><img src="assets/icons/logo.svg" alt="Logo">
+    </div></a></li>
     <li><a href="#" class="nav-item"><img src="assets/icons/home.svg" routerLink="/home">Home</a></li>
     <li><a href="#" class="nav-item"><img src="assets/icons/edit.svg" routerLink="/editor">Sketch Editor</a></li>
     <li><a href="#" class="nav-item"><img src="assets/icons/pixel.svg" routerLink="/pixel">Pixel Art</a></li>
