add login and register

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,5 +2,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <footer>
-    <p>&copy; 2025 Macrame by Massyk Anastasia</p>
+    <p>&copy; 2025 Макраме створено Массик Анастасією</p>
 </footer>
