--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,13 +3,13 @@
 </head>
 <div class="home-container">
   <section class="text-section">
-    <h1>Welcome to Our Application!</h1>
+    <h1>Ласкаво просимо до світу макраме!</h1>
     <p>
-      Our platform is created for those who are passionate about macrame and needlework. 
-      It allows you to easily create sketches and schemes of various complexity, as well 
-      as automatically convert photos into ready-made layouts. We also provide the ability 
-      to save and share your projects, and a community forum will help you share tips and 
-      experiences. With our application, creativity becomes even more accessible!
+      Наша платформа створена для тих, хто захоплюється макраме та рукоділлям. 
+      Вона дозволяє легко створювати ескізи й схеми будь-якої складності, а 
+      також автоматично перетворювати фото на готові шаблони. Ви можете зберігати, 
+      ділитися своїми проєктами та спілкуватися в спільноті. З нашим застосунком 
+      творчість стає ще доступнішою!
     </p>
   </section>
   <section class="image-section">
