--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,41 @@
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 <nav class="navbar">
   <ul>
-    <li><a routerLink="/home"><div class="logo-container nav-item"><img src="assets/icons/logo.svg" alt="Logo">
-    </div></a></li>
-    <li><a href="#" class="nav-item"><img src="assets/icons/home.svg" routerLink="/home">Home</a></li>
-    <li><a href="#" class="nav-item"><img src="assets/icons/edit.svg" routerLink="/editor">Sketch Editor</a></li>
-    <li><a href="#" class="nav-item"><img src="assets/icons/pixel.svg" routerLink="/pixel">Pixel Art</a></li>
-    <li><a href="#" class="nav-item"><img src="assets/icons/community.svg" routerLink="/community">Community</a></li>
-    <li><a href="#" class="nav-item"><img src="assets/icons/registration.svg" routerLink="/auth">Login/Register</a></li>
-    <li><a href="#" class="nav-item"><img src="assets/icons/profile.svg" routerLink="/dashboard">Profile</a></li>
+    <li>
+      <a href="/home">
+        <div class="logo-container nav-item">
+          <img src="assets/icons/logo.svg" alt="Logo">
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/home" class="nav-item">
+        <img src="assets/icons/home.svg"> Головна
+      </a>
+    </li>
+    <li>
+      <a href="/editor" class="nav-item">
+        <img src="assets/icons/edit.svg"> Редактор ескізу
+      </a>
+    </li>
+    <li>
+      <a href="/pixel" class="nav-item">
+        <img src="assets/icons/pixel.svg"> Пікселізація
+      </a>
+    </li>
+    <li>
+      <a href="/community" class="nav-item">
+        <img src="assets/icons/community.svg"> Спільнота
+      </a>
+    </li>
+    <li>
+      <a href="/login" class="nav-item">
+        <img src="assets/icons/registration.svg"> Увійти/Зареєструватися
+      </a>      
+    </li>
+    <li>
+      <a href="/profile" class="nav-item">
+        <img src="assets/icons/profile.svg"> Профіль
+      </a>
+    </li>
   </ul>
 </nav>
