--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,9 +7,12 @@
   position: relative; 
   justify-content: space-between;
   width: 100%;
-  padding: 0 20px;
+  padding: 0 20px 0 3px;
   box-sizing: border-box;
   overflow: hidden;
+  width: 100vw; /* Забезпечує повну ширину екрана */
+  max-width: 100%; /* Запобігає звуженню */
+  
 }
 
 .logo-container {
@@ -22,19 +25,29 @@
 }
 
 .logo-container img {
-  height: 28px;
-  width: 100px; 
+  height: 30px;
+  width: 120px; 
   margin-right: 2px;
 }
 
 .navbar ul {
   display: flex;
   flex-grow: 1;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 0;
   margin: 0;
   list-style-type: none;
 }
+
+.navbar ul li:first-child {
+  margin-left: 0px !important;
+}
+
+.navbar ul li:last-child {
+  margin-right: 0px !important;
+}
+
+
 
 .navbar li {
   display: flex;
