--- a/frontend/src/app/components/registration/registration.component.scss
+++ b/frontend/src/app/components/registration/registration.component.scss
@@ -1,6 +1,6 @@
 $primary-color: #D95DB0;
 $secondary-color: #3344DC;
-$placeholder-color: #aaa; // Сірий колір для placeholder
+$placeholder-color: #aaa; 
 
 body {
     font-family: Arial, sans-serif;
@@ -48,8 +48,8 @@ body {
 
 h1 {
     font-size: 26px;
-    margin-top: -20px; // Піднімаємо заголовок вище
-    margin-bottom: 50px; // Відступ після заголовка
+    margin-top: -20px; 
+    margin-bottom: 50px; 
     color: black;
 }
 
