add field name into front

--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -4,6 +4,9 @@
       <h1>Реєстрація</h1>
       <form>
           <div class="input-group">
+          <input type="name" id="name" name="name" placeholder="Введіть ім'я" required>
+          </div>
+          <div class="input-group">
               <input type="email" id="email" name="email" placeholder="Введіть email" required>
           </div>
           <div class="input-group">
