--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,14 +1,13 @@
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 <div class="home-container">
   <section class="text-section">
-    @if (welcomeMessage) {
-      <div class="welcome-message">{{ welcomeMessage }}</div>
-    }
-    @if (errorMessage) {
-      <div class="error-message">{{ errorMessage }}</div>
-    }
+    @if (loginStatusMessage) {
+      <div class="success-message">{{ loginStatusMessage }}</div>
+  }
+  @if (isLoggedIn) {
+      <p>Ви увійшли в систему!</p>
+  } @else {
+      <p>Будь ласка, <a href="/login">увійдіть</a> або <a href="/register">зареєструйтесь</a>.</p>
+  }
     <h1>Ласкаво просимо до світу макраме!</h1>
     <p>
       Наша платформа створена для тих, хто захоплюється макраме та рукоділлям. 
