--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -44,16 +44,20 @@ html, body {
   padding-right: 50px;
 }
 
-.welcome-message {
-  color: green;
-  font-size: 16px;
-  margin-bottom: 10px;
+.login-status {
+  font-size: 18px;
+  color: #ffffff; /* Білий колір для видимості на темному фоні */
+  text-align: center;
+  margin-bottom: 15px;
 }
 
-.error-message {
-  color: red;
-  font-size: 16px;
-  margin-bottom: 10px;
+.login-status a {
+  color: #803c5e; /* Рожевий колір для посилань */
+  text-decoration: none;
+}
+
+.login-status a:hover {
+  text-decoration: underline;
 }
 
 /* Анімація появи */
